# enumeraga

./: .dockerignore  .gitignore  .golangci.bck.yml  .golangci.yml  AGENTS.md  Dockerfile  Makefile  README.md  SECURITY.md  VERSIONING.md  coverage.html  docker_infra_build_test.sh  entrypoint-infra.sh  enumeraga  enumeraga-docker.sh  enumeraga_v0.1.12-beta  enumeraga_v0.1.7-beta  go.mod  go.mod.bak2  go.sum  main.go  test_resolve_manual.go.bak
.github/workflows/: dependency-review.yml  docker-build.yml  release.yml  test.yml
cloud/: cloudScanner.go
internal/: unused_functions.txt
internal/checks/: checks.go
internal/cloud/: Dockerfile  cloud.go  cloud_test.go  entrypoint.sh
internal/cloudScanner/: cloudScanner.go
internal/cmd/: commands.go
internal/commands/: commands.go  commands.go.bak  commands_test.go  timeout_test.go
internal/config/: cloud_config.go
internal/flags/: flags.go
mcp-server-enumeraga/: .gitignore  Dockerfile  PROMPTS.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.sh
mcp-server-enumeraga/mcp_server_enumeraga/: __init__.py  server.py
mcp-server-enumeraga/tests/: test_server.py
pkg/: checks.go  commands.go  enumeraga.go  portsIterator.go  scans.go  unused_functions.txt  utils.go
releases/: enumeraga_v0.1.0-beta  enumeraga_v0.1.1-beta  enumeraga_v0.1.10-beta  enumeraga_v0.1.11-beta  enumeraga_v0.1.13-beta  enumeraga_v0.1.14-beta  enumeraga_v0.1.2-beta  enumeraga_v0.1.3-beta  enumeraga_v0.1.4-beta  enumeraga_v0.1.5-beta  enumeraga_v0.1.6-beta  enumeraga_v0.1.7-beta  enumeraga_v0.1.8-beta  enumeraga_v0.1.9-beta
(+48 files in other folders)
