[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "mcp-server-enumeraga"
version = "0.1.0"
description = "MCP server for Enumeraga penetration testing automation tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "0x5ubt13" }
]
license = { text = "MIT" }
keywords = ["mcp", "enumeraga", "pentesting", "security", "automation"]
dependencies = [
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-server-enumeraga = "mcp_server_enumeraga.server:main"

[tool.setuptools]
packages = ["mcp_server_enumeraga"]
